Worked around the bug in Firefox where modifier keys were sending a null character as a result of the onkeypress event (see this for how Firefox's behavior is broken: http://www.quirksmode.org/dom/events/#t012) Added some preliminary code to allow users using Firefox and Chrome/Windows to paste things into the terminal (a workaround for bad behavior on the part of these browsers).  Right now apparently only Mac OS X and Linux users using Chrome can right-click to paste into the terminal.  I might have to bring back the funky invisible floating textarea that was present in earlier versions of Gate One.

--- a/gateone/templates/themes/black.css
+++ b/gateone/templates/themes/black.css
@@ -242,6 +242,15 @@
     font-weight: bold;
     font-size: 1.1em;
 }
+#{{prefix}}pastearea {
+    font-family: monospace;
+    display: block;
+    position: absolute;
+    width: 50%;
+    height: 25%;
+    bottom: 2em;
+    right: 5em;
+}
 #{{prefix}}sideinfo {
     -webkit-transform: rotate(90deg);
     -webkit-transform-origin: right bottom;
@@ -358,7 +367,7 @@
 /*    -moz-border-radius: 1em;
     -webkit-border-radius: 1em;*/
 /*     width: 75%; */ /* Looks wierd with this enabled */
-    z-index: 700; /* Same as toolbar to stay above pasteText */
+    z-index: 700; /* Same as toolbar */
     overflow-x: hidden;
     overflow-y: auto;
     padding: 0.25em;
